# sbmlsim

./: .gitignore  .readthedocs.yml  .travis.yml  .zenodo.json  MANIFEST.in  README.md  README.rst  RELEASE.md  Vision.md  fcode.sh  requirements-docs.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.rst  SUPPORT.rst
.github/ISSUE_TEMPLATE/: 01-bug-report.md
.github/workflows/: main.yml
docs/: README.md  Vision.md  conf.py  index.rst  introduction.md  make_docs.sh  overview.md
docs/notebooks/: benchmarks.ipynb  benchmarks_parallel.py  benchmarks_v01.tsv  simjson.ipynb  simjson.rst
docs_builder/: README.md  conf.py  index.rst  make_docs.sh  overview.md  overview.rst  requirements-docs.txt
docs_builder/notebooks/: benchmarks.ipynb  benchmarks.rst  benchmarks_parallel.py  benchmarks_v02.tsv  parameter_fitting.ipynb  parameter_fitting.py  simjson.ipynb
examples/: example_clamp.py  example_scan.py  example_sensitivity.py  glcwb_experiments.py
notebooks/: README.md  altair_examples.ipynb
oven/bugs/: model_nan.py  nan_species.xml  nan_species_roadrunner.py  rr_tolerances_issues.py  times_vector.py
oven/multiprocessing/: example_multiprocessing.py  example_multiprocessing_lucian.py  example_parallel.py  multiprocessing_manager.py  ray_init.py
release-notes/: 0.1.10.md  0.1.11.md  0.1.12.md  0.1.13.md  0.1.14.md  0.1.3.md  0.1.4.md  0.1.5.md  0.1.6.md  0.1.7.md  0.1.8.md  0.1.9.md  0.2.0.md  0.2.1.md  0.2.2.md  0.2.3.md  0.3.0.md  next-release.md
reports/fit-report/: 01_optimization_result.js  01_optimization_result.json  data.json  index.html  package-lock.json  package.json  tsconfig.json
sbmlsim/: __init__.py  _version.py  body19_livertoy_flat.xml  data.py  diff.py  dosing.py  experiment.py  logging_utils.py  model.py  parametrization.py  plots.py  plotting.py  plotting_altair.py  plotting_matlab.py  plotting_matplotlib.py  report.py  result.py  results.py  roadrunner_tools.py  scan.py  serialization.py  simulation.py  simulation_ray.py  simulation_serial.py  tasks.py  timecourse.py  units.py  utils.py  utils_logging.py
sbmlsim/_oven/: copasi_tools.py  simulator.py  solve.py  solve_fba.py  solve_ode.py  test_roadrunner.py
sbmlsim/benchmarks/: benchmarks.tsv  benchmarks_parallel.py
sbmlsim/cellml/: run_cellml.py
sbmlsim/combine/: biomodels.py  mathml.py
sbmlsim/comparison/: diff.py
sbmlsim/distrib/: sampling.py
sbmlsim/examples/: example1.py  example_acetaminophen.py  example_clamp.py  example_ensemble.py  example_experiments.py  example_midazolam.py  example_model_change.py  example_parallel.py  example_pkdb.py  example_scan.py  example_sensitivity.py  example_simulation_serial.py  example_simulator_parallel.py  example_simulator_serial.py  example_timecourse.py  example_units.py  glcwb_experiments.py  ray_example.py  timeline.json
sbmlsim/experiment/: __init__.py  experiment.py  report.py  runner.py
sbmlsim/fit/: README.md  __init__.py  analysis.py  fit.py  fit_example.py  fitting.py  mp_fit.py  mpfit.py  mpfit_example.py  objects.py  optimization.py  sampling.py
sbmlsim/fitting/: fit.py  fit_example.py
sbmlsim/kubernetes/: connect_ray.py
sbmlsim/model/: model.py  model_resources.py  model_roadrunner.py
sbmlsim/models/: __init__.py  biomodels.py  model.py  model_resources.py  model_roadrunner.py
sbmlsim/oven/: altair_examples.py  fitting_parallel.py  glucose_rbcmqreduced_flat.xml  mathml.py  model_loading_benchmark.py  parallel.py
sbmlsim/pkdb/: pkdb.py
sbmlsim/pkpd/: pkpd.py
sbmlsim/plot/: __init__.py  plotting.py  plotting_altair.py  plotting_matplotlib.py  plotting_plotly.py
sbmlsim/processing/: function.py  mathml.py  mathml_functions.py
sbmlsim/report/: experiment_report.py  latex.py
sbmlsim/reports/: report.py
sbmlsim/result/: __init__.py  datagenerator.py  result.py  xresult.py
sbmlsim/simulate/: solve_io.py  test_roadrunner_tools.py  test_solve_ode.py
src/sbmlsim/: TODO.md  (+10 more)
src/sbmlsim/comparison/amicitesting/icg_sd/: CMakeLists.txt  Jy.cpp  compileMexFile.m  dJydsigma.cpp  dJydy.cpp  dJydy.h  dJydy_colptrs.cpp  dJydy_rowvals.cpp  dtotal_cldx_rdata.cpp  dtotal_cldx_rdata_colptrs.cpp  dtotal_cldx_rdata_rowvals.cpp  dwdp.cpp  dwdp.h  dwdp_colptrs.cpp  dwdp_rowvals.cpp  dwdw.cpp  dwdw_colptrs.cpp  dwdw_rowvals.cpp  dwdx.cpp  dwdx.h  dwdx_colptrs.cpp  dwdx_rowvals.cpp  dx_rdatadtcl.cpp  dx_rdatadtcl_colptrs.cpp  dx_rdatadtcl_rowvals.cpp  dx_rdatadx_solver.cpp  dx_rdatadx_solver_colptrs.cpp  dx_rdatadx_solver_rowvals.cpp  dxdotdp_explicit.cpp  dxdotdp_explicit.h  dxdotdp_explicit_colptrs.cpp  dxdotdp_explicit_rowvals.cpp  dxdotdw.cpp  dxdotdw.h  dxdotdw_colptrs.cpp  dxdotdw_rowvals.cpp  dxdotdx_explicit.cpp  dxdotdx_explicit.h  dxdotdx_explicit_colptrs.cpp  dxdotdx_explicit_rowvals.cpp  (+17 more)
src/sbmlsim/comparison/amicitesting/icg_sd/icg_sd/: __init__.py  icg_sd.py
src/sbmlsim/comparison/amicitesting/icg_sd/swig/: icg_sd.i  icg_sd_wrap.cpp
src/sbmlsim/comparison/results/amici/icg_liver/: CMakeLists.txt  Jy.cpp  Jy.h  compileMexFile.m  dJydsigma.cpp  dJydy.cpp  dJydy.h  dJydy_colptrs.cpp  dJydy_rowvals.cpp  dtotal_cldx_rdata.cpp  dtotal_cldx_rdata.h  dtotal_cldx_rdata_colptrs.cpp  dtotal_cldx_rdata_rowvals.cpp  dwdp.cpp  dwdp.h  dwdp_colptrs.cpp  dwdp_rowvals.cpp  dwdw.cpp  dwdw.h  dwdw_colptrs.cpp  dwdw_rowvals.cpp  dwdx.cpp  dwdx.h  dwdx_colptrs.cpp  dwdx_rowvals.cpp  dx_rdatadtcl.cpp  dx_rdatadtcl.h  dx_rdatadtcl_colptrs.cpp  dx_rdatadtcl_rowvals.cpp  dx_rdatadx_solver.cpp  dx_rdatadx_solver.h  dx_rdatadx_solver_colptrs.cpp  dx_rdatadx_solver_rowvals.cpp  dxdotdw.cpp  dxdotdw.h  dxdotdw_colptrs.cpp  dxdotdw_rowvals.cpp  dydx.cpp  icg_liver.cpp  icg_liver.h  (+21 more)
src/sbmlsim/comparison/results/amici/icg_liver/icg_liver/: __init__.py  icg_liver.py
src/sbmlsim/comparison/results/amici/icg_liver/swig/: icg_liver.i  icg_liver_wrap.cpp
tests/: __init__.py  conftest.py  test_data.py  test_diff.py  test_model_change.py  test_parallel.py  test_reports.py  test_scan.py  test_sensitivity.py  test_simulation.py  test_simulator.py  test_timecourse.py  test_units.py  test_utils.py  test_xresults.py
(+880 files in other folders)
