[bumpversion]
current_version = 0.1.6
commit = True
tag = True
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	(?P<release>[a]*)(?P<num>\d*)
serialize =
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}
tag_name = {new_version}

[metadata]
name = sbmlsim
url = https://github.com/matthiaskoenig/sbmlsim
download_url = https://pypi.org/project/sbmlsim
project_urls =
	Source Code = https://github.com/matthiaskoenig/sbmlsim
	Documentation = https://sbmlsim.readthedocs.io
	Bug Tracker = https://github.com/matthiaskoenig/sbmlsim/issues
author = Matthias Koenig
author_email = konigmatt@googlemail.com
maintainer = Matthias Koenig
maintainer_email = konigmatt@googlemail.com
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
license = LGPL-3.0
description = sbmlsim are utilities for simulation of SBML.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
	modeling
	standardization
	SBML

[options]
zip_safe = True
python_requires = >=3.7
install_requires =
	numpy>=1.19.2
	scipy>=1.5.1
	sympy>=1.6.1
	pandas>=1.0.5
	tables>=3.6.1
	xarray>=0.15.1
	bottleneck>=1.3.2
	pint>=0.16.1

	python-libsbml-experimental>=5.18.1
	python-libsedml>=2.0.11
	python-libcombine>=0.2.7
	python-libnuml>=1.1.1

	libroadrunner>=2.0.0

	psutil>=5.6.3
	setproctitle>=1.1.10

	matplotlib>=3.3.0
	plotly
	altair>=4.1.0
	seaborn>=0.10.1

	coloredlogs
	pyDOE>=0.3.8

	Sphinx
	sphinx_rtd_theme
	recommonmark

	ray>=0.8.7
tests_require =
	tox
packages = find:
package_dir =
	= src

[options.packages.find]
where = src

[options.package_data]
sbmlsim =
	resources/*
	test/data/*

[options.extras_require]
development =
	black
	bump2version
	isort
	tox
	pytest>=6.1
	pytest-cov>=2.8.1

[bdist_wheel]
universal = 1

[bumpversion:part:release]
optional_value = placeholder
first_value = placeholder
values =
	placeholder
	a

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:src/sbmlsim/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
