[bumpversion]
current_version = 0.2.2
commit = True
tag = True
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	(?P<release>[a]*)(?P<num>\d*)
serialize =
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}
tag_name = {new_version}

[metadata]
name = sbmlsim
url = https://github.com/matthiaskoenig/sbmlsim
download_url = https://pypi.org/project/sbmlsim
project_urls =
	Source Code = https://github.com/matthiaskoenig/sbmlsim
	Documentation = https://sbmlsim.readthedocs.io
	Bug Tracker = https://github.com/matthiaskoenig/sbmlsim/issues
author = Matthias Koenig
author_email = konigmatt@googlemail.com
maintainer = Matthias Koenig
maintainer_email = konigmatt@googlemail.com
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
license = LGPL-3.0
description = sbmlsim are utilities for the simulation of SBML models.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
	modeling
	standardization
	SBML
	SED-ML
	COMBINE

[options]
zip_safe = True
python_requires = >=3.8
install_requires =
    sbmlutils>=0.8.1
    numpy>=1.23.5
    libroadrunner>=2.4.0
    petab>=0.1.30
    pypesto>=0.2.16
    copasi-basico>=0.4.9
    amici>=0.16.1

    # -> sbmlutils (no version pin)
    python-libsbml
    rich
    depinfo
    pint
    pandas
	Jinja2
	scipy
	sympy
    matplotlib

    # dependencies
	ray[default]>=2.3.0
	xarray>=2023.4.2
    h5netcdf>=1.1.0
	bottleneck>=1.3.7

	python-libsedml>=2.0.32
	python-libnuml>=1.1.6
    # biosimulators-utils>=0.1.171

	psutil>=5.9.0
	setproctitle>=1.2.2
    xmltodict>=0.12.0
	pyDOE>=0.3.8

	seaborn>=0.12.2
tests_require =
	tox>=3.24.3
	pytest>=7.0.1
packages = find:
package_dir =
	= src
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
development =
	pip-tools>=6.5.1
	black>=22.1.0
	bump2version>=1.0.1
	isort>=5.10.1
	tox>=3.24.3
	flake8>=4.0.1
	flake8-mypy>=17.8.0
	mypy>=0.931
	pytest>=7.0.1
	pytest-cov>=3.0.0
docs =
	sphinx>=3.4.3
	recommonmark
	ipykernel>=5.4.3
	nbsphinx>=0.8.1
	sphinx_rtd_theme>=0.5.1
	pypandoc>=1.5
	sphinx-autoapi>=1.7.0

[bdist_wheel]
universal = 1

[bumpversion:part:release]
optional_value = placeholder
first_value = placeholder
values =
	placeholder
	a

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:src/sbmlsim/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
